--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/navbar": "^2.0.34",
+    "@nextui-org/react": "^2.4.3",
     "bootstrap": "^5.3.3",
     "next": "14.2.5",
     "react": "^18",
