--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/navbar": "^2.0.34",
     "@nextui-org/react": "^2.4.3",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "next": "14.2.5",
     "react": "^18",
