--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "mongoose": "^8.5.1",
+    "react-router-dom": "^6.25.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
