--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/node": "^20",
